js/js.translator/testData/incremental/invalidation/removeFile/main/m.kt

fun box() = qux0() + qux1()